--- a/site1.css
+++ b/site1.css
@@ -12,7 +12,7 @@ ul li
 { 
     display: inline-flex;
     list-style: none;
-    margin-left: 11px;
+    margin-left: 100px;
 
 }
 
@@ -24,7 +24,61 @@ h2{
 
 }
 
-body{
-    background-color: #4c7752;
+
+img{width: 200px;
+    height: 200px;
+margin-left:50px ;
+margin-top: 50px;
+border-radius: 75px ;
+border: solid white 1px;
+background-color: turquoise;
+
+
+    
 }
+
+
+
+div{
+    display: inline-flex;
+    padding-right: 50px;
+    margin-left: 0px;
+    padding-bottom: 50px;
+    padding-left: -10px;
+
+    
+  
+}
+
+.pot1{
+    border: solid brown 1px;
+    background-color: brown;
+    margin-top: 20px;
+    margin-right: 40px;
+    margin-left: 90px;
+}
+.pot2{
+    border: solid rgb(17, 95,91 )  1px;
+    background-color: rgb(17, 95,91 );
+    margin-top: 20px;
+    margin-right: 40px;
+    margin-left: 90px;
+    
+    
+}
+.pot3{
+    border: solid black 1px;
+    background-color: black;
+    margin-top: 20px;
+    margin-right: 40px;
+    margin-left: 90Px;
+    
+    
+    
+   
+}
+
+
+
+
 
