--- a/site1.css
+++ b/site1.css
@@ -5,6 +5,15 @@ header{
     width: 100%;
   
 }
+.vide{
+    background-color: mediumspringgreen;
+    width: 100%;
+}
+.port{
+    text-align: center;
+    margin-left: 45%;
+    margin-bottom: 2%;
+}
 
 
 
@@ -30,8 +39,8 @@ img{width: 200px;
 margin-left:50px ;
 margin-top: 50px;
 border-radius: 75px ;
-border: solid white 1px;
-background-color: turquoise;
+
+
 
 
     
@@ -50,16 +59,29 @@ div{
   
 }
 
-.pot1{
+section{
+    margin-top: -5%;
+}
+
+
+.pot1 {
     border: solid brown 1px;
     background-color: brown;
     margin-top: 20px;
     margin-right: 40px;
     margin-left: 90px;
+    
 }
+.image1{
+    background-color: rgb(108, 190, 25);
+    border: solid white 1px;
+ 
+   
+}
+
 .pot2{
-    border: solid rgb(17, 95,91 )  1px;
-    background-color: rgb(17, 95,91 );
+    border: solid   1px;
+    background-color:  rgb(19, 163, 149);
     margin-top: 20px;
     margin-right: 40px;
     margin-left: 90px;
@@ -78,6 +100,23 @@ div{
    
 }
 
+footer{
+    background-color: #2c3e50;
+    margin-top: 1%;
+    color: white;
+    display: inline-flex;
+    width: 100%;
+    height: 110Px;
+    padding-bottom: -10px;
+
+}
+
+
+[ class=""]{
+    margin-left: 16%;
+    margin-top: 1%;
+    
+}
 
 
 
