--- a/site1.css
+++ b/site1.css
@@ -2,12 +2,12 @@ header{
     color: white;
     background-color: #2c3e50;
    display: inline-flex;
-    width: 100%;
+    width: 120%;
   
 }
 .vide{
     background-color: mediumspringgreen;
-    width: 100%;
+    width: 100% ;
 }
 .port{
     text-align: center;
@@ -17,7 +17,7 @@ header{
 
 
 
-ul li
+.prest li
 { 
     display: inline-flex;
     list-style: none;
@@ -100,24 +100,98 @@ section{
    
 }
 
-footer{
-    background-color: #2c3e50;
-    margin-top: 1%;
-    color: white;
-    display: inline-flex;
+footer{ background-color: #2c3e50;
     width: 100%;
-    height: 110Px;
-    padding-bottom: -10px;
+margin-top:1% ;
+color: white;
+padding-bottom: -100px;
 
+    
 }
-
-
-[ class=""]{
-    margin-left: 16%;
-    margin-top: 1%;
+ul{
+    list-style: none;
+    
+}
+.socio{
+    margin-left: -55%;
+    margin-top: 21%;
+    display:  flex;
     
 }
 
+a{
+    color: white;
+}
+
+.numero{
+    margin-left: -55%;
+    margin-top: 21%;
 
 
 
+}
+.ppac{
+    margin-left: -55%;
+    margin-top: 21%;
+
+}
+
+.pass1{ 
+    margin-left: 130px;
+}
+.pass2{
+    margin-left: 50px;
+}
+.pass3{
+    margin-left:-0Px;
+}
+
+  .fb {
+    border: solid 1px white;
+    border-radius: 75px;
+    padding: 10Px 10px;
+    
+    
+
+}
+
+.in{
+    
+    border: solid 1px white;
+    border-radius: 75px;
+    margin-left: 5px;
+    padding: 10Px 10px;
+}
+.tw{
+    
+    border: solid 1px white;
+    border-radius: 75px;
+    margin-left: 5px;
+    padding: 10Px 10px;
+
+}
+.wh{
+   
+    border: solid 1px white;
+    border-radius: 75px;
+    margin-left: 5px;
+    padding: 10Px 10px;
+}
+
+.fb:hover{
+    color:white;
+    background-color: blue;
+
+}
+.tw:hover{
+    color:white;
+    background-color: blue;
+}
+.wh:hover{
+    color:white;
+    background-color: rgb(22, 206, 62);
+}
+.in:hover{
+    color:black;
+    background-color: white;
+}
