--- a/site1.css
+++ b/site1.css
@@ -12,7 +12,12 @@ header{
 .port{
     text-align: center;
     margin-left: 45%;
-    margin-bottom: 2%;
+    
+}
+.etoile{
+    margin-left: -95px;
+    font-size: 2em;
+    padding-top: -3%;
 }
 
 
@@ -21,7 +26,7 @@ header{
 { 
     display: inline-flex;
     list-style: none;
-    margin-left: 100px;
+    margin-left: 120px;
 
 }
 
@@ -195,3 +200,4 @@ a{
     color:black;
     background-color: white;
 }
+
